--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta name="description" content="BookSpectrum is a bookstore that offers customers books of various genres adapted to all customers."/>
+        <meta name="keywords" content="Books , Office , store , Company, Cheap, online shopping , Various genres"/> 
         <link rel="shortcut icon" href="../assets/images/favicon.png" type="image/png">
         <!-- CSS -->
         <link rel="stylesheet" href="../assets/css/style.css"/>
