--- a/index.html
+++ b/index.html
@@ -250,6 +250,11 @@
                 <i class="zmdi zmdi-chevron-up"></i>
             </button>
         </div>
+        <div class="preloader">
+            <div class="content">
+                <img src="assets/images/ssss.gif" alt="Preloader"/>
+            </div>
+        </div>
         <script src="assets/js/app.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
