--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         </div>
         <div class="preloader">
             <div class="content">
-                <img src="assets/images/ssss.gif" alt="Preloader"/>
+                <img src="assets/images/s5.gif" alt="Preloader"/>
             </div>
         </div>
         <script src="assets/js/app.js"></script>
