--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                             <li><a href="documentation.pdf">Documentation</a></li>
                             <li><a href="sitemap.xml">Sitemap</a></li>
                             <li><a href="rss.xml">RSS feed</a></li>
-                            <li><a href="main.js">Main.js</a></li>
+                            <li><a href="assets/js/app.js">Main.js</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -173,10 +173,6 @@
                     </div>
                     <nav>
                         <ul class="social-networks">
-                            <!-- <li><a href="https://github.com"><i class="zmdi zmdi-github"></i></a></li>
-                            <li><a href="https://linkedin.com"><i class="zmdi zmdi-linkedin"></i></a></li>
-                            <li><a href="https://twitter.com"><i class="zmdi zmdi-twitter"></i></a></li>
-                            <li><a href="https://youtube.com"><i class="zmdi zmdi-youtube-play"></i></a></li> -->
                         </ul>
                     </nav>
                 </div>
