--- a/pages/author.html
+++ b/pages/author.html
@@ -99,10 +99,10 @@
                     <hr class="line"/>
                     <nav class="footer-menu">
                         <ul class="menu">
-                            <li><a href="documentation.pdf">Documentation</a></li>
-                            <li><a href="sitemap.xml">Sitemap</a></li>
-                            <li><a href="rss.xml">RSS feed</a></li>
-                            <li><a href="main.js">Main.js</a></li>
+                            <li><a href="../documentation.pdf">Documentation</a></li>
+                            <li><a href="../sitemap.xml">Sitemap</a></li>
+                            <li><a href="../rss.xml">RSS feed</a></li>
+                            <li><a href="../assets/js/app.js">Main.js</a></li>
                         </ul>
                     </nav>
                 </div>
