--- a/pages/contact.html
+++ b/pages/contact.html
@@ -180,10 +180,6 @@
                     <hr class="line"/>
                     <nav class="footer-menu">
                         <ul class="menu">
-                            <!-- <li><a href="index.html">Home</a></li>
-                            <li><a href="shop.html">Shop</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                            <li><a href="author.html">Author</a></li> -->
                         </ul>
                     </nav>
                 </div>
@@ -192,10 +188,10 @@
                     <hr class="line"/>
                     <nav class="footer-menu">
                         <ul class="menu">
-                            <li><a href="documentation.pdf">Documentation</a></li>
-                            <li><a href="sitemap.xml">Sitemap</a></li>
-                            <li><a href="rss.xml">RSS feed</a></li>
-                            <li><a href="main.js">Main.js</a></li>
+                            <li><a href="../documentation.pdf">Documentation</a></li>
+                            <li><a href="../sitemap.xml">Sitemap</a></li>
+                            <li><a href="../rss.xml">RSS feed</a></li>
+                            <li><a href="../assets/js/app.js">Main.js</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -210,10 +206,6 @@
                     </div>
                     <nav>
                         <ul class="social-networks">
-                            <!-- <li><a href="https://github.com"><i class="zmdi zmdi-github"></i></a></li>
-                            <li><a href="https://linkedin.com"><i class="zmdi zmdi-linkedin"></i></a></li>
-                            <li><a href="https://twitter.com"><i class="zmdi zmdi-twitter"></i></a></li>
-                            <li><a href="https://youtube.com"><i class="zmdi zmdi-youtube-play"></i></a></li> -->
                         </ul>
                     </nav>
                 </div>
@@ -240,7 +232,6 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <!-- <tr>
                                 <td>1</td>
                                 <td><img src="assets/images/shop/druzinaPrstena.jpg" alt="Product"/></td>
                                 <td>Druzina prstena</td>
