--- a/pages/author.html
+++ b/pages/author.html
@@ -74,10 +74,10 @@
         </header>
         <div id="main">
             <div class="row author wrapper">
-                <div class="col col-lg-5">
+                <div class="col col-lg-5 col-md-12 col-xs-12 col-12">
                     <img src="../assets/images/author.jpg" alt="Author image"/>
                 </div>
-                <div class="col col-lg-7">
+                <div class="col col-lg-7 col-md-12 col-xs-12 col-12">
                     <h2>Aleksandar Kovačević 27/21</h2>
                     <p>Hi , my name is Aleksandar and I am beginner in web development. I started coding a couple years ago , and I am constantly trying to improve my skills by doing some projects and learning new things.</p>
                     <a href="https://aleksandar2002.github.io/-portfolio/">Portfolio</a>
@@ -128,47 +128,6 @@
                 </div>
             </div>
         </footer>
-        <div class="popupCartFav">
-            <div class="popup-content">
-                <div class="cart">
-                    <h2>Cart</h2>
-                    <table class="cartTable">
-                        <thead>
-                            <tr>
-                                <th>Image</th>
-                                <th>Title</th>
-                                <th>Price</th>
-                                <th>Quantity</th>
-                                <th>Delete</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                        </tbody>
-                    </table>
-                    <p class="empty">There is no item in the cart</p>
-                    <div class="cartFooter">
-                        <p>Total Price: <span id="totalPrice">0</span>RSD</p>
-                        <p>Number of products: <span id="numberOfProducts">0</span></p>
-                        <button id="buyBtn">Buy Products</button>
-                    </div>
-                </div>
-                <div class="favourites">
-                    <h2>Favourites</h2>
-                    <div class="fav-products">
-                        <!-- <div class="fav-product">
-                            <h4>Product name</h4>
-                            <div class="fav-footer">
-                                <img src="assets/images/shop/druzinaPrstena.jpg" alt="some photo"/>
-                                <p>Price</p>
-                            </div>
-                            <button class="removeFromFavBtn">Remove</button>
-                        </div> -->
-                    </div>
-                    <p class="empty">There is no favourite products</p>
-                </div>
-                <button id="closePopupBtn"><i class="zmdi zmdi-close"></i></button>
-            </div>
-        </div>
         <div id="toTop">
             <button>    
                 <i class="zmdi zmdi-chevron-up"></i>
