--- a/pages/shop.html
+++ b/pages/shop.html
@@ -162,20 +162,6 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <!-- <tr>
-                                <td>1</td>
-                                <td><img src="assets/images/shop/druzinaPrstena.jpg" alt="Product"/></td>
-                                <td>Druzina prstena</td>
-                                <td>1200</td>
-                                <td>
-                                    <select name="quantity" id="quantity">
-                                        <option value="1">1</option>
-                                        <option value="1">2</option>
-                                        <option value="1">3</option>
-                                    </select>
-                                </td>
-                                <td><button class="deleteCartProduct">Delete</button></td>
-                            </tr> -->
                         </tbody>
                     </table>
                     <p class="empty">There is no item in the cart</p>
@@ -188,18 +174,16 @@
                 <div class="favourites">
                     <h2>Favourites</h2>
                     <div class="fav-products">
-                        <!-- <div class="fav-product">
-                            <h4>Product name</h4>
-                            <div class="fav-footer">
-                                <img src="assets/images/shop/druzinaPrstena.jpg" alt="some photo"/>
-                                <p>Price</p>
-                            </div>
-                            <button class="removeFromFavBtn">Remove</button>
-                        </div> -->
                     </div>
                     <p class="empty">There is no favourite products</p>
                 </div>
                 <button id="closePopupBtn"><i class="zmdi zmdi-close"></i></button>
+            </div>
+        </div>
+        <div class="buyFromCartMessage">
+            <div class="content">
+                <h4>You successfully bought item from the cart!</h4>
+                <button class="closePopupMessage"><i class="zmdi zmdi-close"></i></button>
             </div>
         </div>
         <div id="toTop">
