--- a/pages/shop.html
+++ b/pages/shop.html
@@ -92,6 +92,7 @@
                                 <option value="priceDesc">Price High-Low</option>
                                 <option value="titleAsc">Title A-Z</option>
                                 <option value="titleDesc">Title Z-A</option>
+                                <option value="new">Newest</option>
                             </select>
                         </article>
                         <p class="empty">There is no books for your search or filter</p>
@@ -196,6 +197,12 @@
         <div class="preloader">
             <div class="content">
                 <img src="../assets/images/s5.gif" alt="Preloader"/>
+            </div>
+        </div>
+        <div class="addToCartMessagePopup">
+            <div class="content">
+                <h2></h2>
+                <button id="closePopupBtn"><i class="zmdi zmdi-close"></i></button>
             </div>
         </div>
         <script src="../assets/js/app.js"></script>
