--- a/index.html
+++ b/index.html
@@ -196,6 +196,12 @@
                 <img src="assets/images/s5.gif" alt="Preloader"/>
             </div>
         </div>
+        <div class="ajaxErrorMessage">
+            <div class="content">
+                <h2></h2>
+                <button id="closePopupBtn"><i class="zmdi zmdi-close"></i></button>
+            </div>
+        </div>
         <script src="assets/js/app.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
